[package]
name = "multicast_receiver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-codegen-pure = "2"

[dependencies]
protobuf = "2.27.1"
r2r = "0.6.2"
futures = "0.3.19"