[package]
name = "udp_uart_relay_dwa_pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
protobuf = "3.1.0"

[build-dependencies]
protobuf = "3.1.0"
protobuf-codegen = "3.1.0"
gcc = "0.3"
